--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,10 @@
   "configurations": [
     {
       "type": "node",
-      "request": "launch",
-      "name": "Launch via NPM",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": [
-        "run-script",
-        "debug"
-      ],
+      "request": "attach",
+      "name": "Attach",
+      "protocol": "inspector",
+      "restart": true,
       "port": 9229
     }
   ]
