--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "tcp-spy": "^1.0.0"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "scripts": {
-    "debug": "node bin/my-bin.js"
+    "start": "node bin/my-bin.js"
   }
 }
