--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "cfork": "^1.6.1",
     "tcp-spy": "^1.0.0"
   },
   "engines": {
