--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "dependencies": {
     "cfork": "^1.6.1",
-    "tcp-spy": "^1.0.0"
+    "tcp-spy": "^1.0.0",
+    "through2": "^2.0.3"
   },
   "engines": {
     "node": ">=6.0.0"
