--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "cfork": "^1.6.1",
     "opn": "^5.1.0",
-    "tcp-spy": "^1.0.0",
-    "through2": "^2.0.3"
+    "tcp-proxy.js": "^1.0.0"
   },
   "engines": {
     "node": ">=6.0.0"
