--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "cfork": "^1.6.1",
+    "inspector-proxy": "^0.1.0",
     "opn": "^5.1.0",
     "tcp-proxy.js": "^1.0.0"
   },
